# annoCLI

./: Cargo.toml
src/: _constants.rs  main.rs  pull_consumption.rs  utils.rs
temp/: consumption.txt
