[package]
name = "rust-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
scraper = {version = "0.14.0" }
tokio = { version = "1.25.0", features = ["full"] }
regex = "1.5.4"
csv = "1.1"
futures = "0.3.17"
colored = "2.0.0"
